refactor: revert java9-style changes and remove debug throughput scaffolding
- reset AtlasTypeDefGraphStore and VertexEdgePropertiesCache to staging behavior\n- remove throughput/progress instrumentation from AtlasTypeDefStoreInitializer\n- remove commented maven-antrun-plugin block from webapp pom