@@ -6,7 +6,6 @@ import org.apache.commons.collections.MapUtils;
 import org.javatuples.Pair;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.apache.atlas.repository.Constants.GUID_PROPERTY_KEY;
 
@@ -156,7 +155,7 @@ public class VertexEdgePropertiesCache {
 
         return references.stream()
                 .filter(reference -> !isDirectionMatch(reference, direction))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isDirectionMatch(
@@ -166,14 +165,11 @@ public class VertexEdgePropertiesCache {
         String referenceVertexId = reference.getReferenceVertexId();
         EdgeVertexReference.EdgeInfo edgeInfo = reference.getEdgeInfo();
 
-        switch (direction) {
-            case IN:
-                return edgeInfo.getInVertexId().equals(referenceVertexId);
-            case OUT:
-                return edgeInfo.getOutVertexId().equals(referenceVertexId);
-            default:
-                return false;
-        }
+        return switch (direction) {
+            case IN -> edgeInfo.getInVertexId().equals(referenceVertexId);
+            case OUT -> edgeInfo.getOutVertexId().equals(referenceVertexId);
+            default -> false;
+        };
     }
 
     public EdgeVertexReference getReferenceVertexByEdgeLabelAndId(String sourceVertexId, String edgeLabel, String targetVertexId, String edgeId, AtlasStructType.AtlasAttribute.AtlasRelationshipEdgeDirection direction) {
